--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
       align-items: center;
       justify-content: center;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-
-      /* Background gradient */
       background: radial-gradient(circle at top left, #ffd1dc 0%, #ff7aa6 45%, #f06 100%);
     }
 
-    /* Soft animated hearts background */
-    .bg-hearts {
+    .bg-hearts, .sparkles {
       position: fixed;
       inset: 0;
       pointer-events: none;
@@ -42,7 +39,6 @@
       100% { transform: translateY(-120vh) scale(1.4); }
     }
 
-    /* Sparkles */
     .sparkle {
       position: absolute;
       width: 4px;
@@ -67,27 +63,16 @@
       text-align: center;
       position: relative;
       z-index: 2;
-
       border: 4px solid #ff4d6d;
       border-radius: 26px;
       background: rgba(255,255,255,0.9);
       box-shadow: 0 15px 40px rgba(0,0,0,0.15);
-
       animation: floatBorder 3s ease-in-out infinite;
     }
 
     @keyframes floatBorder {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
-    }
-
-    /* SQUARE screenshot wrapper */
-    #screenshotWrap {
-      width: 360px;
-      height: 360px;
-      display: none; /* hidden on screen */
-      background: white;
-      border: 4px solid #ff4d6d;
     }
 
     h1 {
@@ -129,7 +114,6 @@
       font-weight: 600;
     }
 
-    /* Floating hearts */
     .heart {
       position: absolute;
       bottom: -20px;
@@ -144,7 +128,6 @@
       100% { transform: translateY(-110vh); opacity: 0; }
     }
 
-    /* Confetti */
     .confetti {
       position: absolute;
       width: 8px;
@@ -157,7 +140,6 @@
       to { transform: translateY(110vh) rotate(720deg); opacity: 0; }
     }
 
-    /* Final screen (STARTS HIDDEN) */
     .final {
       display: none;
       font-size: 1.3rem;
@@ -169,6 +151,7 @@
       justify-content: center;
       gap: 14px;
       position: relative;
+      z-index: 2;
     }
 
     .save-btn {
@@ -183,12 +166,10 @@
       max-width: 240px;
     }
 
-    /* hidden while screenshot */
     .hide-for-screenshot {
       display: block;
     }
 
-    /* watermark */
     .watermark {
       position: absolute;
       bottom: 8px;
@@ -196,6 +177,44 @@
       font-size: 10px;
       color: rgba(0,0,0,0.35);
       user-select: none;
+    }
+
+    /* SCREENSHOT wrapper (includes background + hearts + sparkles) */
+    #screenshotWrap {
+      width: 360px;
+      height: 360px;
+      display: none;
+      position: fixed;
+      left: -9999px;
+      top: -9999px;
+      background: radial-gradient(circle at top left, #ffd1dc 0%, #ff7aa6 45%, #f06 100%);
+      border: 4px solid #ff4d6d;
+      overflow: hidden;
+    }
+
+    #screenshotWrap .bg-hearts,
+    #screenshotWrap .sparkles {
+      position: absolute;
+      inset: 0;
+      overflow: hidden;
+    }
+
+    #screenshotWrap .bg-heart {
+      position: absolute;
+      font-size: 20px;
+      opacity: 0.12;
+      animation: bgFloat linear infinite;
+    }
+
+    #screenshotWrap .sparkle {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 50%;
+      opacity: 0;
+      animation: sparkle 2s infinite;
+      filter: blur(0.2px);
     }
   </style>
 </head>
@@ -230,14 +249,19 @@
     <div class="watermark">Made with ❤️</div>
   </div>
 
-  <!-- SQUARE screenshot wrapper -->
+  <!-- SCREENSHOT wrapper -->
   <div id="screenshotWrap">
-    <div style="font-size: 2.2rem; margin-top: 20px;">💞</div>
-    <div style="margin-top: 15px; font-size: 1.3rem; color:#ff4d6d; font-weight:700;">
-      Screenshot this 😘
-    </div>
-    <div style="position:absolute; bottom: 15px; right: 15px; font-size: 10px; color: rgba(0,0,0,0.35);">
-      Made with ❤️
+    <div class="bg-hearts" id="bgHearts2"></div>
+    <div class="sparkles" id="sparkles2"></div>
+
+    <div style="position:absolute; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; text-align:center;">
+      <div style="font-size: 2.2rem;">💞</div>
+      <div style="margin-top: 15px; font-size: 1.3rem; color:#ff4d6d; font-weight:700;">
+        Screenshot this 😘
+      </div>
+      <div style="position:absolute; bottom: 15px; right: 15px; font-size: 10px; color: rgba(0,0,0,0.35);">
+        Made with ❤️
+      </div>
     </div>
   </div>
 
@@ -301,6 +325,8 @@
 
     // Background hearts
     const bgHearts = document.getElementById("bgHearts");
+    const bgHearts2 = document.getElementById("bgHearts2");
+
     for (let i = 0; i < 18; i++) {
       const heart = document.createElement("div");
       heart.className = "bg-heart";
@@ -309,10 +335,17 @@
       heart.style.top = Math.random() * 100 + "vh";
       heart.style.animationDuration = 10 + Math.random() * 20 + "s";
       bgHearts.appendChild(heart);
+
+      const heart2 = heart.cloneNode(true);
+      heart2.style.left = Math.random() * 100 + "px";
+      heart2.style.top = Math.random() * 100 + "px";
+      bgHearts2.appendChild(heart2);
     }
 
     // Sparkles
     const sparkles = document.getElementById("sparkles");
+    const sparkles2 = document.getElementById("sparkles2");
+
     for (let i = 0; i < 50; i++) {
       const sparkle = document.createElement("div");
       sparkle.className = "sparkle";
@@ -320,6 +353,11 @@
       sparkle.style.top = Math.random() * 100 + "vh";
       sparkle.style.animationDelay = Math.random() * 2 + "s";
       sparkles.appendChild(sparkle);
+
+      const sparkle2 = sparkle.cloneNode(true);
+      sparkle2.style.left = Math.random() * 100 + "px";
+      sparkle2.style.top = Math.random() * 100 + "px";
+      sparkles2.appendChild(sparkle2);
     }
 
     // Floating hearts (foreground)
@@ -347,7 +385,6 @@
     }
 
     function saveScreenshot() {
-      const finalCard = document.getElementById("finalCard");
       const hiddenItems = document.querySelectorAll(".hide-for-screenshot");
       const wrap = document.getElementById("screenshotWrap");
 
