--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
     <div style="position:absolute; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; text-align:center;">
       <div style="font-size: 2.2rem;">💞</div>
-      <div style="margin-top: 15px; font-size: 1.3rem; color:#ff4d6d; font-weight:700;">
+      <div style="margin-top: 15px; font-size: 1.3rem; color:white; font-weight:700;">
         Screenshot this 😘
       </div>
       <div style="position:absolute; bottom: 15px; right: 15px; font-size: 10px; color: rgba(0,0,0,0.35);">
@@ -404,3 +404,4 @@
   </script>
 </body>
 </html>
+
