--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <div class="bg-hearts" id="sparkles"></div>
 
   <div class="card" id="mainCard">
-    <h1 id="title">Alex, will you be my Valentine? 💘</h1>
+    <h1 id="title">Amisha baby, will you be my Valentine? 💘</h1>
 
     <div class="buttons">
       <button id="yes" onclick="yesClick()">Yes 💖</button>
@@ -180,18 +180,19 @@
     <div id="message"></div>
   </div>
 
-  <div class="card final" id="finalCard">
-    <div style="font-size: 2.2rem;">💞</div>
-    <div>Happy Valentine’s Day 💕</div>
-    <div class="watermark">Made with ❤️</div>
-  </div>
+ <div class="card final" id="finalCard">
+  <div style="font-size: 2.2rem;">💞</div>
+  <div>Happy Valentine’s Day 💕</div>
+  <div style="font-size: 1.1rem;">See you soon 💖</div>
+  <div class="watermark">Made with ❤️</div>
+</div>
 
   <audio id="music" loop>
     <source src="https://cdn.pixabay.com/download/audio/2021/08/04/audio_9a3b2f0a7c.mp3" type="audio/mpeg">
   </audio>
 
   <script>
-    const recipientName = "Alex";
+    const recipientName = "Amisha baby";
     document.getElementById("title").innerText =
       `${recipientName}, will you be my Valentine? 💘`;
 
@@ -268,3 +269,4 @@
   </script>
 </body>
 </html>
+
