--- a/index.html
+++ b/index.html
@@ -184,6 +184,15 @@
   <div style="font-size: 2.2rem;">💞</div>
   <div>Happy Valentine’s Day 💕</div>
   <div style="font-size: 1.1rem;">See you soon 💖</div>
+   <img
+    src="https://media.giphy.com/media/l0MYB8Ory7Hqefo9a/giphy.gif"
+    alt="Milk and Mocha Bears"
+    style="
+      width: 180px;
+      margin-top: 16px;
+      border-radius: 18px;
+    "
+  />
   <div class="watermark">Made with ❤️</div>
 </div>
 
@@ -269,4 +278,5 @@
   </script>
 </body>
 </html>
+
 
