--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       animation: sparkle 2s infinite;
     }
 
+    .milkmocha {
+  animation: floatBorder 3s ease-in-out infinite;
+}
+
     @keyframes sparkle {
       0% { opacity: 0; transform: scale(0.4); }
       50% { opacity: 1; transform: scale(1); }
@@ -184,15 +188,13 @@
   <div style="font-size: 2.2rem;">💞</div>
   <div>Happy Valentine’s Day 💕</div>
   <div style="font-size: 1.1rem;">See you soon 💖</div>
-   <img
-    src="https://media.giphy.com/media/l0MYB8Ory7Hqefo9a/giphy.gif"
-    alt="Milk and Mocha Bears"
-    style="
-      width: 180px;
-      margin-top: 16px;
-      border-radius: 18px;
-    "
-  />
+  <img
+  src="https://media.giphy.com/media/l0MYB8Ory7Hqefo9a/giphy.gif"
+  class="milkmocha"
+  alt="Milk and Mocha Bears"
+  style="width: 180px; margin-top: 16px; border-radius: 18px;"
+/>
+
   <div class="watermark">Made with ❤️</div>
 </div>
 
@@ -278,5 +280,6 @@
   </script>
 </body>
 </html>
+
 
 
