--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <div class="bg-hearts" id="bgHearts"></div>
 
   <div class="card" id="mainCard">
-    <h1 id="title">Alex, will you be my Valentine? 💘</h1>
+    <h1 id="title">Amisha baby, will you be my Valentine? 💘</h1>
 
     <div class="buttons">
       <button id="yes" onclick="yesClick()">Yes 💖</button>
@@ -163,7 +163,7 @@
   </audio>
 
   <script>
-    const recipientName = "Alex";
+    const recipientName = "Amisha baby";
     document.getElementById("title").innerText =
       `${recipientName}, will you be my Valentine? 💘`;
 
@@ -217,3 +217,4 @@
 
 </body>
 </html>
+
