--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
   <div class="card final" id="finalCard">
     <div style="font-size: 2.2rem;">💞</div>
-    <div>Happy Valentine’s Day 💕</div>
+    <div>Happy Propose Day 💕</div>
     <div style="font-size: 1.1rem;">See you soon 💖</div>
 
     <img
@@ -217,5 +217,6 @@
 
 </body>
 </html>
+
 
 
