--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>
 
     <img
-      src="https://media.giphy.com/media/SYo1DFS8NLhhqzzjMU/giphy.gif"
+      src="https://media1.giphy.com/media/SYo1DFS8NLhhqzzjMU/giphy.gif"
       alt="Milk and Mocha Bears"
       class="milkmocha fade-in"
       style="animation-delay:0.6s"
@@ -250,3 +250,4 @@
 
 </body>
 </html>
+
