--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     .bg-heart {
       position: absolute;
       font-size: 20px;
-      opacity: 0.15;
+      opacity: 0.12;
       animation: bgFloat linear infinite;
     }
 
@@ -48,7 +48,7 @@
       z-index: 2;
       border: 4px solid #ff4d6d;
       border-radius: 26px;
-      background: rgba(255,255,255,0.95);
+      background: rgba(255,255,255,0.9);
       box-shadow: 0 15px 40px rgba(0,0,0,0.15);
       animation: floatBorder 3s ease-in-out infinite;
     }
@@ -62,7 +62,6 @@
       color: #ff4d6d;
       font-size: 1.7rem;
       margin-bottom: 25px;
-      text-shadow: 0 0 8px rgba(255,77,109,0.25);
     }
 
     .buttons {
@@ -89,7 +88,6 @@
     #no {
       background: #eee;
       color: #555;
-      position: relative;
     }
 
     #message {
@@ -99,7 +97,6 @@
       font-weight: 600;
     }
 
-    /* FINAL CARD */
     .final {
       display: none;
       font-size: 1.3rem;
@@ -114,7 +111,7 @@
       z-index: 2;
     }
 
-    /* Fade in */
+        /* Fade in */
     .fade-in {
       opacity: 0;
       animation: fadeUp 0.8s ease forwards;
@@ -125,17 +122,11 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* Milk & Mocha heartbeat */
     .milkmocha {
       width: 180px;
       margin-top: 14px;
       border-radius: 18px;
-      animation: heartbeat 2.2s ease-in-out infinite;
-    }
-
-    @keyframes heartbeat {
-      0%,100% { transform: scale(1); }
-      50% { transform: scale(1.05); }
+      animation: floatBorder 3s ease-in-out infinite;
     }
 
     .watermark {
@@ -164,18 +155,18 @@
     <div id="message"></div>
   </div>
 
-  <div class="card final" id="finalCard">
+ <div class="card final" id="finalCard">
     <div class="fade-in" style="font-size:2.2rem; animation-delay:0s">💞</div>
     <div class="fade-in" style="animation-delay:0.2s">Happy Propose Day 💕</div>
     <div class="fade-in" style="font-size:1.1rem; animation-delay:0.4s">
       See you soon 💖
     </div>
 
+
     <img
-      src="https://media1.giphy.com/media/SYo1DFS8NLhhqzzjMU/giphy.gif"
+      src="https://media.giphy.com/media/SYo1DFS8NLhhqzzjMU/giphy.gif"
       alt="Milk and Mocha Bears"
-      class="milkmocha fade-in"
-      style="animation-delay:0.6s"
+      class="milkmocha"
     />
 
     <div class="watermark">Made with ❤️</div>
@@ -183,10 +174,6 @@
 
   <audio id="music" loop>
     <source src="https://cdn.pixabay.com/download/audio/2021/08/04/audio_9a3b2f0a7c.mp3" type="audio/mpeg">
-  </audio>
-
-  <audio id="pop">
-    <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_5f6e.mp3" type="audio/mpeg">
   </audio>
 
   <script>
@@ -211,9 +198,6 @@
         noBtn.innerText = noTexts[noCount];
       }
 
-      noBtn.style.position = "absolute";
-      noBtn.style.left = Math.random() * 60 + "%";
-      noBtn.style.top = Math.random() * 60 + "%";
       noBtn.style.transform = `scale(${Math.max(0.4, 1 - noCount * 0.15)})`;
 
       if (noCount >= 4) {
@@ -225,8 +209,7 @@
       document.getElementById("message").innerText =
         "YAY!! 💕 I can’t wait 😍";
 
-      document.getElementById("pop").play().catch(()=>{});
-      document.getElementById("music").play().catch(()=>{});
+      document.getElementById("music").play().catch(() => {});
 
       setTimeout(() => {
         document.getElementById("mainCard").style.display = "none";
@@ -235,12 +218,10 @@
     }
 
     const bgHearts = document.getElementById("bgHearts");
-    const emojis = ["💗","💖","💕","💘","💞"];
-
-    for (let i = 0; i < 20; i++) {
+    for (let i = 0; i < 18; i++) {
       const heart = document.createElement("div");
       heart.className = "bg-heart";
-      heart.innerText = emojis[Math.floor(Math.random() * emojis.length)];
+      heart.innerText = "💗";
       heart.style.left = Math.random() * 100 + "vw";
       heart.style.top = Math.random() * 100 + "vh";
       heart.style.animationDuration = 10 + Math.random() * 20 + "s";
@@ -250,4 +231,7 @@
 
 </body>
 </html>
+
+
+
 
